--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
-    <string name="app_name">MoviewDB</string>
+    <string name="app_name">Movies</string>
     <string name="movie_poster">Movie Poster</string>
-    <string name="title_activity_details">DetailsActivity</string>
     <string name="settings">Settings</string>
 
     <string name="pref_sort_by_title">Sort By</string>
